src-ken&y/objects/Accounting_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Accounting_Default_Segment__c</fullName>
        <label>Accounting Default Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Accounting_Default__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Accounting_Default_Configurations</relationshipLabel>
        <relationshipName>Accounting_Default_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Default__c</fullName>
        <label>Accounting Default</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accounting_Default_Configurations</relationshipLabel>
        <relationshipName>Accounting_Default_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Entry_Line_Segment__c</fullName>
        <label>Accounting Entry Line Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Accounting_Entry_Line__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>AEL_Segment_Configurations</relationshipLabel>
        <relationshipName>AEL_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Entry_Line__c</fullName>
        <label>Accounting Entry Line</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accounting_Entry_Line_Configurations</relationshipLabel>
        <relationshipName>Accounting_Entry_Line_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Default_Segment__c</fullName>
        <label>Accounting Rule Default Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Accounting_Rule__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Default_Segment_Configurations</relationshipLabel>
        <relationshipName>Default_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Segment_Reference__c</fullName>
        <label>Accounting Rule Segment Reference</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Accounting_Rule__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Segment_Reference_Configurations</relationshipLabel>
        <relationshipName>Segment_Reference_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule_Segment__c</fullName>
        <label>Accounting Rule Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Accounting_Rule__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>AR_Segment_Configurations</relationshipLabel>
        <relationshipName>AR_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accounting_Rule__c</fullName>
        <label>Accounting Rule</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accounting_Rule_Configurations</relationshipLabel>
        <relationshipName>Accounting_Rule_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Segment__c</fullName>
        <label>Budget Line Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Budget_Line__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>BL_Segment_Configurations</relationshipLabel>
        <relationshipName>BL_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget Line</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Budget_Line_Configurations</relationshipLabel>
        <relationshipName>Budget_Line_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Line_Segment__c</fullName>
        <label>Journal Entry Line Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Journal_Entry_Line__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>JEL_Segment_Configurations</relationshipLabel>
        <relationshipName>JEL_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Line__c</fullName>
        <label>Journal Entry Line</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Journal_Entry_Line_Configurations1</relationshipLabel>
        <relationshipName>Journal_Entry_Line_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Recurring_Template_Line_Segment__c</fullName>
        <label>Recurring Template Line Segment</label>
        <metadataRelationshipControllingField>Accounting_Configuration__mdt.Recurring_Template_Line__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>RTL_Segment_Configurations</relationshipLabel>
        <relationshipName>RTL_Segment_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Recurring_Template_Line__c</fullName>
        <label>Recurring Template Line</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Recurring_Template_Line_Configurations</relationshipLabel>
        <relationshipName>Recurring_Template_Line_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Accounting Configuration</label>
    <pluralLabel>Accounting Configurations</pluralLabel>
</CustomObject>